layout issues

--- a/src/app/day-time-slot/day-time-slot.component.sass
+++ b/src/app/day-time-slot/day-time-slot.component.sass
@@ -12,6 +12,7 @@
 
     & > div
       transform: translate(0, -5px)
+      text-align: center
 
   & > div.events
     width: calc(100% - 100px)
